add fields priduce and accept in swagger annotations. Add readme.md file with describing of how to use application
