# docs/swagger.json
@@ -12,6 +12,9 @@
         "/:id": {
             "get": {
                 "description": "return route object by route id or error if there is not one",
+                "produces": [
+                    "text/xml"
+                ],
                 "tags": [
                     "routes"
                 ],
@@ -44,6 +47,9 @@
         "/:id/passports": {
             "get": {
                 "description": "return all passports are belonged the route",
+                "produces": [
+                    "text/xml"
+                ],
                 "tags": [
                     "routes"
                 ],
@@ -76,6 +82,9 @@
         "/:passportId": {
             "get": {
                 "description": "return passport by ID from database if there is one, or return error object with status code 200",
+                "produces": [
+                    "text/xml"
+                ],
                 "tags": [
                     "passports"
                 ],
@@ -93,7 +102,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/passport.Model"
+                            "$ref": "#/definitions/passport.OutputModel"
                         }
                     }
                 }
@@ -128,6 +137,9 @@
         "/:passportId/towers/:towerId": {
             "get": {
                 "description": "return certain tower of the passport by ID",
+                "produces": [
+                    "text/xml"
+                ],
                 "tags": [
                     "towers"
                 ],
@@ -161,6 +173,9 @@
         "/:passportId/towers/findtower": {
             "get": {
                 "description": "return the closest tower belonged the passport by coordinates",
+                "produces": [
+                    "text/xml"
+                ],
                 "tags": [
                     "towers"
                 ],
@@ -200,6 +215,9 @@
         "/all": {
             "get": {
                 "description": "return all routes from database",
+                "produces": [
+                    "text/xml"
+                ],
                 "tags": [
                     "routes"
                 ],
@@ -217,13 +235,20 @@
         "/passport": {
             "post": {
                 "description": "save passport in database",
+                "consumes": [
+                    "multipart/form-data",
+                    "text/xml"
+                ],
+                "produces": [
+                    "text/xml"
+                ],
                 "tags": [
                     "passports"
                 ],
                 "summary": "SavePassport",
                 "parameters": [
                     {
-                        "description": "xml structure of passport",
+                        "description": "xml structure of passport or zip archive of xml files",
                         "name": "input",
                         "in": "body",
                         "required": true,
@@ -236,7 +261,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/passport.Model"
+                            "$ref": "#/definitions/passport.OutputModel"
                         }
                     },
                     "400": {
@@ -251,6 +276,12 @@
         "/route": {
             "post": {
                 "description": "Save route in database",
+                "consumes": [
+                    "text/xml"
+                ],
+                "produces": [
+                    "text/xml"
+                ],
                 "tags": [
                     "routes"
                 ],
@@ -378,6 +409,28 @@
             }
         },
         "passport.Model": {
+            "type": "object",
+            "properties": {
+                "Header": {
+                    "type": "object",
+                    "$ref": "#/definitions/passport.HeaderModel"
+                },
+                "Towers": {
+                    "type": "object",
+                    "$ref": "#/definitions/passport.TowersModel"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "text": {
+                    "type": "string"
+                },
+                "xmlname": {
+                    "type": "string"
+                }
+            }
+        },
+        "passport.OutputModel": {
             "type": "object",
             "properties": {
                 "Expiration": {
